Application name is no longer hard coded.

--- a/TotalCrossVM/builders/vc2013/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp.csproj
+++ b/TotalCrossVM/builders/vc2013/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp.csproj
@@ -249,6 +249,7 @@
     <Content Include="Assets\Tiles\IconicTileSmall.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="TotalCrossManifest.xml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PhoneDirect3DXamlAppComponent\PhoneDirect3DXamlAppComponent.vcxproj">
