--- a/TotalCrossVM/builders/build.xml
+++ b/TotalCrossVM/builders/build.xml
@@ -234,7 +234,7 @@ target: buildInstalls - run installshield to create the SDK and Samples
    
    <!-- litebase -->
    <copy todir="${target.sdk3.path}/dist/vm">  <fileset dir="${target.litebase.path}/dist/lib"/> </copy>
-   <copy todir="${target.sdk3.path}/dist/samples" includeEmptyDirs="No">
+   <copy todir="${target.sdk3.path}/dist/samples" includeEmptyDirs="No" failonerror="No">
       <fileset dir="${target.litebase.path}/dist/samples" />
       <mapper type="glob" from="*" to="LB_*"/>
    </copy>
