--- a/TotalCrossSDK/build.xml
+++ b/TotalCrossSDK/build.xml
@@ -297,6 +297,7 @@ target: desktop
        <keep name="tc.tools.deployer.IPhoneBuildSource"><field access="public protected" /><method access="public protected" /></keep>
        <keep name="tc.tools.deployer.IPhoneBuildSource$ER"><field access="public protected" /><method access="public protected" /></keep>
        <keep name="tc.tools.deployer.Deployer4IPhone$*"><field access="public protected" /><method access="public protected" /></keep>
+       <keep name="tc.tools.deployer.zip.BlackHoleOutputStream"><field access="public protected" /><method access="public protected" /></keep>
        <keep name="tc.tools.deployer.bzip2.*"><field access="public protected" /><method access="public protected" /></keep> 
        <keep name="tc.tools.NativeMethodsPrototypeGenerator"><field  access="public protected" /><method access="public protected" /></keep>
        <keep name="tc.tools.FontGenerator"><field  access="public protected" /><method access="public protected" /></keep>
