--- a/TotalCrossVM/builders/build.xml
+++ b/TotalCrossVM/builders/build.xml
@@ -55,11 +55,11 @@
 <property name="android.temp"      value="${android.project.path}/apps/tcvm/deploy" />
 
 <!-- properties regarding the TC paths -->
-<!--property name="target.sdk.path"   value="t:/SDK/TotalCrossSDK"/-->
+<property name="target.sdk.path"   value="t:/SDK/TotalCrossSDK"/>
 
 <property name="base.target.path"  value="${basedir}/../../../output/release"/>
 <property name="source.vm.path"    value="${basedir}/.."/>
-<property name="target.sdk.path"   value="${base.target.path}/TotalCrossSDK"/>
+<!--property name="target.sdk.path"   value="${base.target.path}/TotalCrossSDK"/-->
 <property name="target.sdk3.path"  value="${base.target.path}/TotalCross3"/>
 <property name="source.sdk.path"   value="${basedir}/../../TotalCrossSDK"/>
 <property name="base.temp.path"    value="${basedir}/../../../temp"/>
@@ -303,7 +303,10 @@ target: buildInstalls - run installshield to create the SDK and Samples
    <move todir="${target.sdk3.path}/docs/tc" > <fileset dir="${target.sdk3.path}/docs/html"/>    </move>
    
    <!-- litebase -->
-   <copy file="${target.litebase.path}/dist/litebase.jar" todir="${target.sdk3.path}/dist" />
+   <unzip src="${target.litebase.path}/dist/litebase.jar" dest="${base.temp.path}/jar"/>
+   <zip destfile="${target.sdk3.path}/dist/tc.jar" update="true" includes="**" basedir="${base.temp.path}/jar"  />
+   <delete dir="${base.temp.path}/jar" />
+   
    <copy todir="${target.sdk3.path}/dist/vm">  <fileset dir="${target.litebase.path}/dist/lib"/> </copy>
    <copy todir="${target.sdk3.path}/dist/samples" includeEmptyDirs="No" failonerror="No">
       <fileset dir="${target.litebase.path}/dist/samples" />
