fixed delete of litebase.apk

--- a/TotalCrossVM/builders/build.xml
+++ b/TotalCrossVM/builders/build.xml
@@ -243,7 +243,7 @@ target: buildInstalls - run installshield to create the SDK and Samples
 
    <delete dir="${target.sdk3.path}/dist/vm/android/lb"/>
    <delete dir="${target.sdk3.path}/dist/vm/android/tc"/>
-   <delete dir="${target.sdk3.path}/dist/vm/android/Litebase.apk"/>
+   <delete file="${target.sdk3.path}/dist/vm/android/Litebase.apk"/>
    
    <signjar alias="tcandroidkey" keystore="${source.sdk.path}/etc/security/tcandroidkey.keystore"
     storepass="@ndroid$w" keypass="@ndroidsw">
@@ -281,6 +281,7 @@ target: buildInstalls - run installshield to create the SDK and Samples
    <copy file="${source.sdk.path}/docs/companion_resources/ant_build/build.xml" todir="${target.sdk3.path}/docs" overwrite="yes" />
    
    <antcall target="mergeAPK" />
+
 </target>
 
 <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
